--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="convert-value">
+    <div class="conversion-setup">
         <h2>Metric/Imperial Unit Conversion</h2>
         <input type="number" value="20">
         <button>Convert</button>
